/game/peek now accepts any kind of code
